# SortAnalys

./: CMakeLists.txt  GraphicMgrs.cpp  GraphicMgrs.h  GraphicsSettings.cpp  GraphicsSettings.h  MyFuncs.cpp  MyFuncs.h  MySorts.cpp  MySorts.h  MyWindow.h  README.md  WinApp.cpp  WinApp.h  a.out  main.cpp  point.cpp  point.h  widget.cpp  widget.h
